log/build_2024-03-13_17-16-34/locobot_controller/stderr.log
  File "/home/yicheng/me326_ws/install/locobot_controller/lib/python3.8/site-packages/locobot_controller/locobot_controller.py", line 37
    cy = int(M["m01"]/M["mOO"})
                             ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '['

  File "/home/yicheng/me326_ws/install/locobot_controller/lib/python3.8/site-packages/locobot_controller/locobot_strategy.py", line 53
    if (msg.data = True):
                 ^
SyntaxError: invalid syntax

